# Queens

./: Queens.py  README.md  pyproject.toml  queens_games.pkl  test_queens.py  utils.py
