[tool.poetry]
name = "queens"
version = "0.1.0"
description = ""
authors = ["mrkprc1 <mrkprc1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
